kubernetes/portainer/portainer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: portainer
spec:
  ports:
  - name: http
    protocol: TCP
    port: 9000
    targetPort: 9000
  selector:
    app.kubernetes.io/instance: portainer-helm
    app.kubernetes.io/name: portainer
  type: ClusterIP
